loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:4: error: type mismatch;
 found   : plm.universe.Direction
 required: String
  direction = getDirection()
                          ^