loopfor.LoopCourseForest.scala.code
var direction: String = ""
for (i <- 1 to 65*7) {
  avance()
  direction = getDirection()
  if (direction == "NORTH" && estFaceMur()) {
    gauche()
  }
}